--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                         </div>
                         <div class="step-number">2</div>
                         <h3 class="step-title">View Result</h3>
-                        <p class="step-description">Get beautiful arrangement images</p>
+                        <p class="step-description">Draft beautiful arrangement images with AI</p>
                     </div>
                     
                     <div class="process-step">
@@ -593,8 +593,8 @@
                             </div>
                         </div>
                         <div class="step-number">3</div>
-                        <h3 class="step-title">Save & Share</h3>
-                        <p class="step-description">Browse and share your creations</p>
+                        <h3 class="step-title">Save Arrangements</h3>
+                        <p class="step-description">Resuse and manage your arrangements</p>
                     </div>
                 </div>
             </div>
